--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -20,5 +20,5 @@
 </p>
 <div class="m_clear"></div>
 <script type="text/javascript">
-    _gaq.push(['_trackEvent', 'Core Error', '404', document.location.href]);
+    ga('send', 'Core Error', '404', document.location.href);
 </script>
