--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -7,5 +7,5 @@
     Приносим свои извинения за доставленные неудобства.
 </p>
 <script type="text/javascript">
-    _gaq.push(['_trackEvent', 'Core Error', '503', document.location.href]);
+    ga('send', 'Core Error', '503', document.location.href);
 </script>
