Новая версия GA - остальные ошибки

--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -7,5 +7,5 @@
     Приносим свои извинения за доставленные неудобства.
 </p>
 <script type="text/javascript">
-    ga('send', 'Core Error', '503', document.location.href);
+    ga('send', 'event', '503', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
 </script>
