--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -44,7 +44,7 @@
                         ga('send', 'pageview');
                         window.onerror = function (msg, url, line) {
                             var preventErrorAlert = true;
-                            ga('send', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line, 0);
+                            ga('send', 'event', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line, 0);
                             return preventErrorAlert;
                         };
                     </script>
