Ошибки на страницах кидаем в ЯМ

--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -8,4 +8,5 @@
 </p>
 <script type="text/javascript">
     ga('send', 'event', '503', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
+    yaCounter1209661.reachGoal('error-503');
 </script>
