--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -21,4 +21,5 @@
 <div class="m_clear"></div>
 <script type="text/javascript">
     ga('send', 'event', '404', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
+    yaCounter1209661.reachGoal('error-404');
 </script>
