Ошибки на страницах кидаем в ЯМ с доп информацией

--- a/templates/_errors/er403.sm.html
+++ b/templates/_errors/er403.sm.html
@@ -7,5 +7,5 @@
 <p>You don't have permission to access <b>https://{$requested}</b> on this server.</p>
 <script type="text/javascript">
     ga('send', 'event', '403', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
-    yaCounter1209661.reachGoal('error-403');
+    yaCounter1209661.reachGoal('error-403', {url: document.location.pathname + document.location.search, referer: document.referrer});
 </script>
