--- a/templates/_errors/er403.sm.html
+++ b/templates/_errors/er403.sm.html
@@ -6,6 +6,8 @@
 <h2>Forbidden</h2>
 <p>You don't have permission to access <b>https://{$requested}</b> on this server.</p>
 <script type="text/javascript">
+$(function() {
     ga('send', 'event', '403', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
     yaCounter1209661.reachGoal('error-403', { url: document.location.pathname + document.location.search, referer: document.referrer });
+});
 </script>
