--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -20,6 +20,8 @@
 </p>
 <div class="m_clear"></div>
 <script type="text/javascript">
+$(function() {
     ga('send', 'event', '404', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
     yaCounter1209661.reachGoal('error-404', { url: document.location.pathname + document.location.search, referer: document.referrer });
+});
 </script>
