--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -7,6 +7,8 @@
     Приносим свои извинения за доставленные неудобства.
 </p>
 <script type="text/javascript">
-    ga('send', 'event', '503', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
-    yaCounter1209661.reachGoal('error-503', { url: document.location.pathname + document.location.search, referer: document.referrer });
+    $(function() {
+        ga('send', 'event', '503', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
+        yaCounter1209661.reachGoal('error-503', { url: document.location.pathname + document.location.search, referer: document.referrer });
+    });
 </script>
