К ЯМ стучимся через window

--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -16,12 +16,12 @@
 </div>
 {/if}
 <p>
-    А еще можно попробовать найти что-нибудь <a href="https://{$host}/map/">на карте</a>.
+    А еще можно попробовать найти что-нибудь <a href="/map/">на карте</a>.
 </p>
 <div class="m_clear"></div>
 <script type="text/javascript">
 $(function() {
     ga('send', 'event', '404', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
-    yaCounter1209661.reachGoal('error-404', { url: document.location.pathname + document.location.search, referer: document.referrer });
+    window.yaCounter1209661.reachGoal('error-404', { url: document.location.pathname + document.location.search, referer: document.referrer });
 });
 </script>
