Ошибки в ЯМ через window

--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -9,6 +9,6 @@
 <script type="text/javascript">
     $(function() {
         ga('send', 'event', '503', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
-        yaCounter1209661.reachGoal('error-503', { url: document.location.pathname + document.location.search, referer: document.referrer });
+        window.yaCounter1209661.reachGoal('error-503', { url: document.location.pathname + document.location.search, referer: document.referrer });
     });
 </script>
