--- a/templates/_errors/er403.sm.html
+++ b/templates/_errors/er403.sm.html
@@ -8,6 +8,6 @@
 <script type="text/javascript">
 $(function() {
     ga('send', 'event', '403', document.location.pathname + document.location.search, document.referrer, { 'nonInteraction': 1 });
-    yaCounter1209661.reachGoal('error-403', { url: document.location.pathname + document.location.search, referer: document.referrer });
+    window.yaCounter1209661.reachGoal('error-403', { url: document.location.pathname + document.location.search, referer: document.referrer });
 });
 </script>
