--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -1,5 +1,23 @@
 <img class="pageicon" src="/img/admin/ico.a_refs.gif" />
 <h3>{$title}</h3>
+
+<table class="commontable" style="float:left;">
+    <tr>
+        <th>Регион</th>
+        {foreach from=$matrix.types item=t}
+        <th><img src="/img/points/x16/{$t.icon|default:'star.png'}"/></th>
+        {/foreach}
+    </tr>
+    {foreach from=$matrix.counts item=c}
+    <tr>
+        <td style="text-align:left;">{$c.title}</td>
+        {foreach from=$matrix.types key=tid item=t}
+        <td style="text-align:center;">{$c.types.$tid}</td>
+        {/foreach}
+    </tr>
+    {/foreach}
+</table>
+
 <form method="get" action="addpoints.php">
     <table class="commontable">
         <tr>
