Кнопка скролинга в главный шаблон, see #24

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -76,6 +76,9 @@
                         <div id="content">
                             {if $page->h1}<h1>{$page->h1}</h1>{/if}
                             {$page->content}
+                            <div class="content-scroll-buttons">
+                                <img src="/img/btn/btn.scroll-top.48.png" alt="go top" />
+                            </div>
                         </div><!-- #content-->
                     </div><!-- #wrapper -->
                     <footer id="footer">
