Временный комментарий в body для рамблер-топ100

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -131,5 +131,6 @@
                             {$debug_info}
                         </div>
                     </footer><!-- #footer -->
+                    <!-- Запрос на восстановление регистрационной информации -->
                 </body>
                 </html>
