--- a/templates/_admin/points.list.sm.html
+++ b/templates/_admin/points.list.sm.html
@@ -53,14 +53,17 @@
                 <td>Телефон</td>
                 <td><input type="text" name="phone" value="{$filter.phone}" style="width: 100px;" /></td>
                 <td>Web</td>
-                <td><input type="text" name="web" value="{$filter.web}" style="width: 100px;" /></td>
+                <td>
+                    <input type="text" name="web" value="{$filter.web}" style="width: 100px;" />
+                    <label>
+                        Нет адреса
+                        <input type="checkbox" name="noaddr" value="1" {if 1 == $filter.noaddr}checked{/if} />
+                    </label>
+                </td>
                 <td>GPS</td>
                 <td>
                     N<input type="text" name="gps_lat" value="{$filter.gps.lat}" style="width: 80px;" />
                     E<input type="text" name="gps_lon" value="{$filter.gps.lon}" style="width: 80px;" />
-                    <label style="text-decoration: line-through;">
-                        Адр. <input type="checkbox" name="noaddr" value="1" {if 1 == $filter.noaddr}checked{/if} />
-                    </label>
                 </td>
             </tr>
             <tr>
