Выравниваем версии файлов в репозитории

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -48,7 +48,8 @@
             <input type="button" class="pointadding-item-geo-set" value="MAP" data-mapstate="0" />
             <input type="button" class="pointadding-item-geo-go m_hide" value="GO" />
             <input type="button" class="pointadding-item-geo-get m_hide" value="FIND" />
-            <input type="button" class="pointadding-item-geo-reverse m_hide" value="GEO" />
+            &nbsp;&nbsp;
+            <input type="button" class="pointadding-item-geo-reverse" value="↓" />
         </td>
     </tr>
     <tr>
