Удалил раздел карты в ajax, fix #42

--- a/templates/_pages/pagecity.edit.sm.html
+++ b/templates/_pages/pagecity.edit.sm.html
@@ -15,7 +15,7 @@
         <a href="#" title="{$ptype.tp_name}"><img src="/img/points/32/{$ptype.tp_icon}" alt="{$ptype.tp_name}" /></a>
         {/foreach}
     </div>
-    <a id="city_map_link" href="map.html" title="Большая карта достопримечательностей {$city.pc_inwheretext}">на весь экран</a>
+    <a id="city_map_link" href="/map/#center={$city.pc_longitude},{$city.pc_latitude}&zoom={$city.pc_zoom+1}" title="Большая карта достопримечательностей {$city.pc_inwheretext}">на весь экран</a>
 </div>
 {/if}
 
