Подключил CKEditor на странице модулей

--- a/templates/_admin/modules.sm.html
+++ b/templates/_admin/modules.sm.html
@@ -150,3 +150,14 @@
         </td>
     </tr>
 </table>
+
+<script>
+    $(document).ready(function () {
+        $('#imd_pagecontent').ckeditor(function () {
+        }, {
+            customConfig: "/config/config.cke4.js",
+            height: '400px',
+            toolbar: "Lite"
+        });
+    });
+</script>
