Показываем кнопку прокрутки только по js-скрипту

--- a/css/common-layout.css
+++ b/css/common-layout.css
@@ -257,6 +257,9 @@ ol {
     top:-100px;
     cursor: pointer;
 }
+.content-scroll-buttons.m_hide {
+    display: none;
+}
 
 /* Footer
 -----------------------------------------------------------------------------*/
