--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -76,7 +76,7 @@
                         <div id="content">
                             {if $page->h1}<h1>{$page->h1}</h1>{/if}
                             {$page->content}
-                            <div class="content-scroll-buttons">
+                            <div class="content-scroll-buttons m_hide">
                                 <img src="/img/btn/btn.scroll-top.48.png" alt="go top" />
                             </div>
                         </div><!-- #content-->
