Изменил логику удаления записей из таблиц статистики Яндекса

--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -79,7 +79,7 @@
                     </td>
                     <td align="center">
                         <form method="post">
-                            <input type="hidden" name="town_id" value="{$item.ws_city_id}" />
+                            <input type="hidden" name="ws_id" value="{$item.ws_id}" />
                             <input type="submit" name="do_delete_town" value="удалить" />
                         </form>
                     </td>
