Использование баллов при работе с API Яндекс.Директ

--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -43,6 +43,9 @@
                 <li>позиции от: {$towns.date_positions}</li>
                 <li>запросы от: {$towns.date_weights}</li>
             </ul>
+            <ul style="text-align:left;">
+                <li>баллы: {$towns.units}</li>
+            </ul>
         </td>
     </tr>
 </table>
