--- a/css/admin.css
+++ b/css/admin.css
@@ -184,7 +184,6 @@ ymaps h3 {
     text-decoration: underline;
 }
 
-/* -------------------------------------- / INDEX ------------------------ */
 /* --------------------------------------  USERS ------------------------ */
 #usertable tr th {
     text-align: left;
@@ -200,7 +199,7 @@ ymaps h3 {
     background-color: #F1ECF1;
     padding: 3px;
 }
-/* -------------------------------------- / USERS ------------------------ */
+
 /* --------------------------------------  MODULES ------------------------ */
 label {
     color: #5C8DA0;
@@ -220,7 +219,7 @@ input, textarea, select, #addmdbtn, hr {
     background-color:white;*/
     font-size:smaller;
 }
-/* -------------------------------------- / MODULES ------------------------ */
+
 /* --------------------------------------  LOG_ERROR ------------------------ */
 #erlogtbl {
     background-color: #8A648A;
@@ -234,7 +233,6 @@ input, textarea, select, #addmdbtn, hr {
     background-color: #D3CED3;
     padding: 3px;
 }
-/* -------------------------------------- / LOG_ERROR ------------------------ */
 
 /* --------------------------------------  CRON ------------------------ */
 #crontable {
@@ -255,7 +253,6 @@ input, textarea, select, #addmdbtn, hr {
 .input_elements {
     vertical-align: middle;
 }
-/* -------------------------------------- / CRON ------------------------ */
 
 /* --------------------------------------  POINTS ------------------------ */
 .points-editprop {
@@ -264,6 +261,24 @@ input, textarea, select, #addmdbtn, hr {
     border-bottom: 1px dotted #4169E1;
 }
 
+/* --------------------------------------  STAT_YANDEX ------------------------ */
+.ws-counts .ws-counts-minmax {
+    display: inline-block;
+    font-style: italic;
+    color:#777;
+}
+.ws-counts .ws-counts-minmax sup, .ws-counts .ws-counts-minmax sub {
+    display: block;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+.ws-counts .ws-counts-minmax sup {
+    top: -0.6em;
+}
+.ws-counts .ws-counts-minmax sub {
+    top: 0.4em;
+}
 
 /* Autocomplete
 -----------------------------------------------------------------------------*/
