Убрал подзапросы на странице city

--- a/templates/city/city.edit.sm.html
+++ b/templates/city/city.edit.sm.html
@@ -38,9 +38,9 @@
                    {/if}
                    ><b>{$city.pc_title}</b></a></td>
             <td style="color: {if $city.len < 1200}#8B0000{else}#228B22{/if};">{$city.len} знаков</td>
-            <td>{$city.meta}</td>
+            <td>{$city.pc_count_metas}</td>
             <td>{$city.anons_len} зн</td>
-            <td>{$city.pts} точек</td>
+            <td>{$city.pc_count_points} точек</td>
             <td>{$city.ws_weight_max}</td>
             <td style="color:{if $city.ws_position == 0}#8B0000{elseif $city.ws_position > 10}#FF0000{else}#228B22{/if};">{$city.ws_position}</td>
             <td><a href="detail/?city_id={$city.pc_id}" title="детально...">детально {$city.pc_title}</a></td>
