--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -80,7 +80,7 @@
         </tr>
         {foreach from=$list item=req}
         <tr>
-            <td>{counter}</td>
+            <td {if $req.dc_id}style="background-color:#bcf5bc;"{/if}>{counter}</td>
             <td>{$req.cp_date|date_format:"%d.%m.%Y"}</td>
             <td title="{$req.type_title}" class="m_center"><img src="/img/points/x16/{$req.type_icon|default:'star.png'}"/></td>
             <td>{$req.cp_city}</td>
