--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -67,7 +67,13 @@
             </td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>
+                <select name="state" style="width:80px;" onchange="submit();">
+                    <option value="0">--все--</option>
+                    <option value="-1">нет</option>
+                    <option value="1">есть</option>
+                </select>
+            </td>
             <td>
                 <select name="state" style="width:80px;" onchange="submit();">
                     <option value="0">--все--</option>
