Исправил имя поля

--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -68,7 +68,7 @@
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>
-                <select name="state" style="width:80px;" onchange="submit();">
+                <select name="gps" style="width:50px;" onchange="submit();">
                     <option value="0">--все--</option>
                     <option value="-1">нет</option>
                     <option value="1">есть</option>
