Неправильно повесил классы

--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -1,7 +1,7 @@
 <img class="pageicon" src="/img/admin/ico.a_refs.gif" />
 <h3>{$title}</h3>
 
-<table class="commontable pointadding-list" style="float:left;">
+<table class="commontable" style="float:left;">
     <tr>
         <th>Регион</th>
         {foreach from=$matrix.types key=tid item=t}
@@ -31,7 +31,7 @@
 </table>
 
 <form method="get" action="addpoints.php">
-    <table class="commontable">
+    <table class="commontable pointadding-list">
         <tr>
             <th>№ п/п</th>
             <th>Дата</th>
