--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="{$page->keywords|escape:"html"}" />
               <meta name="description" content="{$page->description|escape:"html"}" />
                     <meta property="fb:admins" content="787133747" />
-                    {foreach from=$page->getOGMetas() key=property item=content}
+                    {foreach from=$page->getCustomMetas() key=property item=content}
                     <meta property="{$property}" content="{$content|truncate:200}" />
                     {/foreach}
               <meta name="robots" content="index, follow" />
