Добавил разметку LD+JSON

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -36,6 +36,11 @@
                 <script type="text/javascript" src="/addons/jquery.ui/jquery.ui.datepicker-ru.js" defer="defer"></script>
                 <link rel="stylesheet" href="/addons/jquery.ui/ui-lightness/jquery-ui-1.8.2.custom.css" type="text/css" />
                 {/if}
+                {if !empty($page->getJSONLD())}
+                <script type="application/ld+json">
+                    {json_encode($page->getJSONLD())}
+                </script>
+                {/if}
                 </head>
                 <body>
                     {literal}
