--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -27,6 +27,7 @@
                 <![endif]-->
                 <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat" defer="defer"></script>
                 <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
+                <script type="text/javascript" src="https://relap.io/api/v6/head.js?token=bcuyS0TAMs8ykpeS" async></script>
                 <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
                 {if $page->user.userid}
                 <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
