Добавил в шаблон страницы города блок для показа relap.io, see #58

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -107,6 +107,8 @@
     </table>
 
     <p></p>
+    <div class="relap-content-city"></div>
+    <p></p>
 
     {if $points_servo}
     <h2>Полезная информация</h2>
