Правильное многоточие для обрезанных тегов

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -10,7 +10,7 @@
               <meta name="description" content="{$page->description|escape:"html"}" />
                     <meta property="fb:admins" content="787133747" />
                     {foreach from=$page->getCustomMetas() key=property item=content}
-                    <meta property="{$property}" content="{$content|truncate:500:"&hellip;"}" />
+                    <meta property="{$property}" content="{$content|truncate:500:"…"}" />
                     {/foreach}
               <meta name="robots" content="index, follow" />
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
