Добавил на страницу объектов блок relap, see #58

--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -17,6 +17,9 @@
         {/foreach}
     </ul>
     {/if}
+    
+    <div class="relap-content-object"></div>
+    
     <p><a href="." id="page_point_link_back" title="перейти к достопримечательностям {$city.pc_inwheretext}">&larr; достопримечательности {$city.pc_inwheretext}</a></p>
 </div>
 <div id="widget_photos"></div>
