Выводим на экран количество фото по странице

--- a/templates/city/city.edit.sm.html
+++ b/templates/city/city.edit.sm.html
@@ -18,6 +18,7 @@
             <th>Мета</th>
             <th>Анонс</th>
             <th>Точки</th>
+            <th>Фото</th>
             <th>Я.Частота</th>
             <th>Я.Позиция</th>
         </tr>
@@ -40,6 +41,7 @@
             <td>{$city.pc_count_metas}</td>
             <td>{$city.anons_len} зн</td>
             <td>{$city.pc_count_points} точек</td>
+            <td>{$city.pc_count_photos} фото</td>
             <td>{$city.ws_weight_max}</td>
             <td style="color:{if $city.ws_position == 0}#8B0000{elseif $city.ws_position > 10}#FF0000{else}#228B22{/if};">{$city.ws_position}</td>
         </tr>
