Была ошибка в теге

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -4,7 +4,7 @@
 <div id="flickr-import-content">
     <input type="text" id="flickr-import-url" />
     <input type="button" id="flickr-import-button" value="Запрос" />
-    <input type="text" id="flickr-import-clean" value="X" />
+    <input type="button" id="flickr-import-clean" value="X" />
     <div id="flickr-import-console"></div>
     <div id="flickr-import-preview"></div>
 
