Кнопка очистки поиска региона

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -13,6 +13,7 @@
         <input type="hidden" id="flickr-import-photo-id" value="0" />
         <input type="hidden" id="flickr-import-city-id" value="0" />
         <input type="button" id="flickr-import-save" value="Сохранить" />
+        <input type="button" id="flickr-import-save-clean" value="X" />
     </div>
 
 </div>
