Подсказка популярных городов

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -18,6 +18,10 @@
 
 </div>
 
+<div id="flickr-suggestions">
+    <ul></ul>
+</div>
+
 
 <script type="text/javascript" src="/js/admin/flickr.js" defer="defer"></script>
 
