--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -7,7 +7,7 @@
 
 <form action="?act=upload" method="post" enctype="multipart/form-data">
     Добавить фото
-    <input type="file" name="photo" />
+    <input type="file" name="photo" accept="image/jpeg,image/png" />
     <input type="submit" value="Загрузить" />
 </form>
 
