Стили и js вынес в отдельные файлы, see #60

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -23,25 +23,5 @@
 </div>
 
 
+<link rel="stylesheet" href="/css/admin/flickr.css" type="text/css" />
 <script type="text/javascript" src="/js/admin/flickr.js" defer="defer"></script>
-
-<style>
-    #flickr-import-content {
-        position: relative;
-        margin: 5px;
-    }
-    #flickr-import-url {
-        width: 300px;
-    }
-    #flickr-import-console {
-        min-height: 135px;
-        margin:5px;
-    }
-    #flickr-import-preview {
-        position:absolute;
-        top: 0;
-        left: 400px;
-    }
-    #flickr-import-add {
-    }
-</style>
