--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -20,6 +20,9 @@
             <input type="hidden" id="photos-upload-bind-ptid" name="ptid" value="0" />
             <input type="hidden" id="photos-upload-bind-mdid" name="mdid" value="0" />
             <input type="hidden" id="photos-upload-bind-pgid" name="pgid" value="0" />
+
+            <input type="text" id="photos-upload-bind-pc" value="" placeholder="регион" />
+            <input type="button" id="photos-upload-bind-pc-clean" value="X" />
         </div>
         <input type="submit" value="Загрузить" />
     </form>
