Саджест объекта для привязки, see #60

--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -23,6 +23,9 @@
 
             <input type="text" id="photos-upload-bind-pc" value="" placeholder="регион" />
             <input type="button" id="photos-upload-bind-pc-clean" value="X" />
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="text" id="photos-upload-bind-pt" value="" placeholder="объект" />
+            <input type="button" id="photos-upload-bind-pt-clean" value="X" />
         </div>
         <input type="submit" value="Загрузить" />
     </form>
